begin change structer project
